--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -3,31 +3,56 @@
     <head>
     	<style type="text/css">
     		body {
-    			color: blue;
+    			color: white;
     		}
     		h1 {
     			color: purple;
     		}
     	</style>
-        <title>Hello World</title>
+        <title>INFO 101 Exercise 1</title>
     </head>
-    <body bgcolor="yellow">
-        <h1><u>Hello World!</u></h1>
-        <marquee>
-            INFO 101 Builder Exercise 1
+    <body bgcolor="black">
+	<center>
+	<h1>Swing Dance</h1>        
+	<marquee>
+		<h3>Let's Swing it!</h3>
         </marquee>
+	<pre>
+	<i>
+It don't mean a thing if it ain’t got that swing
+It don't mean a thing, all you got to do is sing
+It makes no diff’rence if it’s sweet or it’s hot
+Just give that rhythm ev’rything you got
+	</i>	
+	</pre>
+	<h1>Hellzapoppin'</h1>
+	<h4><b>Let's see an example of people Swing Dancing in a movie from the 40's</b></h4>
+		<iframe width="1120" height="630" src="https://www.youtube.com/embed/mUbweBA5fh0?start=180" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-        <h3> The Weeknd - Starboy </h3>
+        <h1> Famous Music for Swing Dance </h1>
+	<h3> Stomping At The Savoy </h3>
 
         <audio controls>
-  			<source src="The Weeknd - Starboy.mp3" type="audio/mpeg">
+  			<source src="Stomping At The Savoy.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
-		</audio>
-		<h1>
-			Lindy Hop
-		</h1>
-		<center>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/EjaqRlmVMiQ?start=180" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-		</center>
+	</audio>	
+	<h1>Basic Swing Dance Lesson</h1>
+        <video width="640" height="480" controls>
+  		<source src="Basic Elements of Swing Dancing.mp4" type="video/mp4">
+  		Your browser does not support the video tag.
+	</video>
+	<br>
+	<h1>Frankie Manning</h1>
+	<h3> The ambassador of Lindy Hop </h3>
+	<object data="http://www.frankiemanning.com/" width="1800" height="500" border = "5">
+	</object>
+	
+	<br>
+	<br>
+	<br>
+	<h3>RSS Dance feed</h3>
+	<br>
+	<iframe width="1800" height="200" class="rssdog" src="http://www.rssdog.com/index.htm?url=http%3A%2F%2Fwww.dancespirit.com%2Ffeed&mode=html&showonly=&maxitems=0&showdescs=1&desctrim=1800&descmax=0&tabwidth=100%25&linktarget=_blank&textsize=inherit&bordercol=%23d4d0c8&headbgcol=%23999999&headtxtcol=%23ffffff&titlebgcol=%23f1eded&titletxtcol=%23000000&itembgcol=%23ffffff&itemtxtcol=%23000000&ctl=0"></iframe>
+	</center>
     </body>
 </html>
